About and Portfolio work AND I FIXED THE IMAGE STRETCHING BUG!!!!!

--- a/css/flexcontainers.css
+++ b/css/flexcontainers.css
@@ -21,6 +21,7 @@
 
 #flex-image {
   max-width: 300px;
+  align-self: center
 }
 
 #flex-mobile {
